# templates-sdk

./: .gitignore  .travis.yml  README.md
go-http/: go.mod  handler.go
java11/: .gitignore  README.adoc  build.gradle  settings.gradle
java11/entrypoint/: build.gradle
java11/entrypoint/src/main/java/com/openfaas/entrypoint/: App.java  HandlerProvider.java
java11/entrypoint/src/test/java/: AppTest.java
java11/entrypoint/src/test/java/com/openfaas/entrypoint/: AppTest.java
java11/model/: build.gradle
java11/model/src/main/java/com/openfaas/model/: AbstractHandler.java  IHandler.java  IRequest.java  IResponse.java  Request.java  Response.java  SampleAbstractHandler.java  SampleHandler.java
java11/model/src/test/java/com/openfaas/model/: RequestTest.java  ResponseTest.java
python/function-sdk/: Makefile  README.md  pyproject.toml
python/function-sdk/function_sdk/: __init__.py  env.py  secrets.py
python/function-sdk/tests/: test_function_sdk.py  test_secrets.py
python/openfaas-sdk/: Makefile  README.md  pyproject.toml
python/openfaas-sdk/openfaas_sdk/: __init__.py
python/openfaas-sdk/openfaas_sdk/function/: __init__.py  secrets.py
python/openfaas-sdk/tests/: test_function_sdk.py  test_secrets.py
