[tool.poetry]
name = "function-sdk"
version = "0.1.0"
description = "OpenFaaS function SDK contains standard portable utilities to make writing functions easier."
authors = ["Lucas Roesler <roesler.lucas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8"
mypy = "0.780"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
