[tool.poetry]
name = "openfaas-sdk"
version = "0.1.0"
license = "MIT"
description = "OpenFaaS function SDK contains standard portable utilities to make writing functions easier."
authors = ["Lucas Roesler <roesler.lucas@gmail.com>"]
repository = "https://github.com/openfaas/templates-sdk"
readme = "README.md"
homepage = "https://openfaas.com"
keywords = ["serverless", "openfaas", "functions"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
]
include = [
    { path = "LICENSE", format = "sdist" },
]

[tool.poetry.urls]
"Issues" = "https://github.com/openfaas/templates-sdk/issues"


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8"
mypy = "0.780"
black = "^20.8b1"
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
